fix message spacing

--- a/client/src/less/base.less
+++ b/client/src/less/base.less
@@ -333,7 +333,7 @@ body {
 
 .chat-message {
   position: relative;
-  margin-bottom: 7px;
+  margin-bottom: 5px;
 }
 
 .chat-message.offline {
@@ -394,7 +394,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-bottom: 8px;
+  margin-bottom: 6px;
 }
 
 .chat-message:not(:first-of-type) .chat-message_header {
